dark mode fix and some reorganizing

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -12,8 +12,9 @@
 html,
 body {
   @apply bg-white dark:bg-gray-950;
+  color-scheme: light;
 
-  @media (prefers-color-scheme: dark) {
+  &:where(.dark, .dark *) {
     color-scheme: dark;
   }
 }
